# fabric-v2

./: .gitignore  Dockerfile
.github/workflows/: router-deploy.yml
router/: .pdm-python  Dockerfile  fly.toml  main.py  pyproject.toml
